# libyuvrotation

./: .gitignore  CMakeLists.txt  README.md  libyuvrotation.pro
include/: libyuvrotation.h
share/filewatcher/: CMakeLists.txt  filewatcher.pri
src/: filemonitor.cpp  libyuvcore.cpp  libyuvrotation.cpp  yuvrotate.cpp
src/inc/: filemonitor.h  libyuvcore.h  singleton.h  yuvrotate.h
test/: CMakeLists.txt  main.cpp  testlibyuv.pro
